# yt2doc

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-build-and-publish.yml  lint.yml  test-e2e-linux.yml  test-e2e-ollama.yml  test-e2e.yml  type-check-lint-integ-tests.yml  type_check_and_lint.yml
cli/: main.py
examples/: Apple Podcast Why Should You Think Like an Economist.md  Business Plan Writing 101 Wharton Entrepreneurship Series.md  CUDA Mode Keynote  Andrej Karpathy  Eureka Labs.md  Carolynn Levy And Panel (Jon Levy, Jason Kwon) - Startup Legal Mechanics.md  Deleuze critique de Descartes - Conférence de David Hébert - Collège Ahuntsic.md  General Intelligence Define it, measure it, build it.md  Production AI Engineering starts with Evals.md  State of AI 2024.md  Subra Suresh Distinguished Lecture Series - How Could Machines Reach Human-Level Intelligence.md  Ursula Prokop Das Wittgenstein-Haus – gebaute Philosophie.md  本田由紀「社会変容がもたらす“悪”」ー公開講座「悪」2015.md
src/yt2doc/: __main__.py  cli.py  factories.py  timer.py  writer.py
src/yt2doc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/yt2doc/extraction/: extractor.py  file_cache.py  interfaces.py
src/yt2doc/formatting/: formatter.py  interfaces.py  llm_adapter.py  llm_topic_segmenter.py  paragraphs_segmenter.py  template.md
src/yt2doc/i18n/: punctuations.py
src/yt2doc/media/: interfaces.py  media_info_extractor.py
src/yt2doc/transcription/: faster_whisper_adapter.py  interfaces.py  transcriber.py  whisper_cpp_adapter.py
src/yt2doc/youtube/: interfaces.py
src/yt_extractor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/formatting/: test_formatter.py
tests/integ/formatting/: test_formatter.py
tests/unit/formatting/: test_paragraphs_segmenter.py
yt2doc/: factories.py  yt2doc.py
yt2doc/extraction/: extractor.py  interfaces.py
yt2doc/formatting/: formatter.py  interfaces.py  llm_chapter_segmenter.py  llm_topic_segmenter.py
yt2doc/transcription/: faster_whisper_adapter.py  file_cache.py  interfaces.py  transcriber.py  whisper_cpp_adapter.py
yt2doc/youtube/: yt_video_info_extractor.py
yt_extractor/: factories.py  file_cache.py  formatter.py  main.py  transcript_extractor.py  whisper_adapter.py  writer.py  yt2doc.py  yt_dlp_adapter.py
yt_extractor/extraction/: extractor.py  file_cache.py  formatter.py  interfaces.py
yt_extractor/formatting/: formatter.py  interfaces.py
yt_extractor/transcription/: faster_whisper_adapter.py  interfaces.py  transcriber.py  whisper_cpp_adapter.py
yt_extractor/youtube/: interfaces.py  yt_video_info_extractor.py  yt_video_info_processor.py
