[project]
name = "yt-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.0.3",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.9.1",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
    "typer-slim>=0.12.5",
    "wtpsplit>=2.0.8",
    "yt-dlp>=2024.8.6",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.27.0",
    "mypy>=1.11.2",
    "ruff>=0.6.3",
    "types-tqdm>=4.66.0.20240417",
]

[[tool.mypy.overrides]]
module = [
    "yt_dlp",
    "faster_whisper",
    "ffmpeg",
    "wtpsplit",
]
ignore_missing_imports = true
